--- a/content/themes/casper/assets/css/screen.css
+++ b/content/themes/casper/assets/css/screen.css
@@ -4,7 +4,7 @@
 
 /*
 
-    0.  Normalize
+    0.  Reset
     1.  Icons
     2.  General
     3.  Utilities
@@ -22,81 +22,52 @@
 */
 
 /* ==========================================================================
-   0. normalize.css v3.0.3 | MIT License | git.io/normalize | (minified)
+   0. Reset.css v2.0 | no License | meyerweb.com | (minified)
    ========================================================================== */
 
-html {
-    font-family: sans-serif;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%
-}
-body { margin: 0; }
-article, aside, details,
-figcaption, figure,
-footer, header,
-main, menu, nav,
-section, summary { display:block; }
-audio, canvas, progress, video {
-    display: inline-block;
-    vertical-align: baseline;
-}
-audio:not([controls]) { display: none; height: 0; }
-[hidden], template { display: none; }
-a { background-color: transparent;}
-a:active, a:hover { outline: 0; }
-abbr[title] { border-bottom: 1px dotted; }
-b, strong { font-weight: bold; }
-dfn { font-style: italic; }
-h1 { font-size: 2em; margin: 0.67em 0; }
-mark { background: #ff0; color: #000; }
-small { font-size: 80%; }
-sub, sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
-}
-sup { top: -0.5em; }
-sub { bottom: -0.25em; }
-img { border: 0; }
-svg:not(:root) { overflow: hidden; }
-figure { margin: 1em 40px; }
-hr { box-sizing: content-box; height: 0; }
-pre { overflow: auto; }
-code, kbd, pre, samp { font-family: monospace, monospace; font-size: 1em; }
-button, input, optgroup, select, textarea {
-    color: inherit;
-    font: inherit;
-    margin: 0;
-}
-button { overflow: visible; }
-button, select { text-transform: none; }
-button, html input[type="button"],
-input[type="reset"], input[type="submit"] {
-    -webkit-appearance: button;
-    cursor: pointer;
-}
-button[disabled], html input[disabled] { cursor: default; }
-button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
-input { line-height: normal; }
-input[type="checkbox"],
-input[type="radio"] { box-sizing: border-box; padding: 0; }
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button { height: auto; }
-input[type="search"] { -webkit-appearance: textfield; }
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration { -webkit-appearance: none; }
-fieldset {
-    border: 1px solid #c0c0c0;
-    margin: 0 2px;
-    padding: 0.35em 0.625em 0.75em;
-}
-legend { border: 0; padding: 0; }
-textarea { overflow: auto; }
-optgroup { font-weight: bold; }
-table{ border-collapse: collapse; border-spacing: 0; }
-td, th{ padding: 0; }
-
+   html, body, div, span, applet, object, iframe,
+   h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+   a, abbr, acronym, address, big, cite, code,
+   del, dfn, em, img, ins, kbd, q, s, samp,
+   small, strike, strong, sub, sup, tt, var,
+   b, u, i, center,
+   dl, dt, dd, ol, ul, li,
+   fieldset, form, label, legend,
+   table, caption, tbody, tfoot, thead, tr, th, td,
+   article, aside, canvas, details, embed,
+   figure, figcaption, footer, header, hgroup,
+   menu, nav, output, ruby, section, summary,
+   time, mark, audio, video {
+   	margin: 0;
+   	padding: 0;
+   	border: 0;
+   	font-size: 100%;
+   	font: inherit;
+   	vertical-align: baseline;
+   }
+   /* HTML5 display-role reset for older browsers */
+   article, aside, details, figcaption, figure,
+   footer, header, hgroup, menu, nav, section, main {
+   	display: block;
+   }
+   body {
+   	line-height: 1;
+   }
+   ol, ul {
+   	list-style: none;
+   }
+   blockquote, q {
+   	quotes: none;
+   }
+   blockquote:before, blockquote:after,
+   q:before, q:after {
+   	content: '';
+   	content: none;
+   }
+   table {
+   	border-collapse: collapse;
+   	border-spacing: 0;
+   }
 
 /* ==========================================================================
    1. Icons - Sets up the icon font and respective classes
@@ -116,7 +87,7 @@ td, th{ padding: 0; }
 
 /* Apply these base styles to all icons */
 [class^="icon-"]:before, [class*=" icon-"]:before {
-    font-family: "casper-icons", "Open Sans", sans-serif;
+    font-family: "casper-icons", "Source Sans Pro", sans-serif;
     speak: none;
     font-style: normal;
     font-weight: normal;
@@ -173,6 +144,12 @@ td, th{ padding: 0; }
    2. General - Setting up some base styles
    ========================================================================== */
 
+ *, *:after, *:before {
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   box-sizing: border-box;
+ }
+
 html {
     height: 100%;
     max-height: 100%;
@@ -180,18 +157,9 @@ html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-body {
-    height: 100%;
-    max-height: 100%;
-    font-family: "Merriweather", serif;
-    letter-spacing: 0.01rem;
-    font-size: 1.8rem;
-    line-height: 1.75em;
-    color: #3A4145;
-    -webkit-font-feature-settings: 'kern' 1;
-    -moz-font-feature-settings: 'kern' 1;
-    -o-font-feature-settings: 'kern' 1;
-    text-rendering: geometricPrecision;
+body.overflow-hidden {
+  /* when primary navigation is visible, the content in the background won't scroll */
+  overflow: hidden;
 }
 
 ::-moz-selection {
@@ -210,7 +178,7 @@ h4, h5, h6 {
     color: #2E2E2E;
     line-height: 1.15em;
     margin: 0 0 0.4em 0;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     text-rendering: geometricPrecision;
 }
 
@@ -245,6 +213,7 @@ h6 {
 a {
     color: #4A4A4A;
     transition: color 0.3s ease;
+    text-decoration: none;
 }
 
 a:hover {
@@ -446,7 +415,7 @@ textarea, select, input {
     padding: 6px 9px;
     margin: 0 0 5px 0;
     outline: 0;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     font-size: 1.6rem;
     font-weight: 100;
     line-height: 1.4em;
@@ -500,9 +469,9 @@ button {
     outline: none;
     text-decoration: none;
     color: #fff;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 11px; // Hack because Firefox sucks ass.
-    line-height: 13px; // Hack because Firefox sucks ass.
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 11px; /* Hack because Firefox sucks ass.*/
+    line-height: 13px; /* Hack because Firefox sucks ass.*/
     font-weight: 300;
     text-align: center;
     letter-spacing: 1px;
@@ -597,7 +566,7 @@ body.nav-opened .site-wrapper {
 
 .main-nav a {
     text-decoration: none;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 /* Navigation */
@@ -772,7 +741,7 @@ body.nav-opened .nav {
     color: #111 !important; /* Overides `.nav a:link, .nav a:visited` colour */
     text-align: center;
     font-size: 12px;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     text-transform: uppercase;
     text-decoration: none;
     line-height: 35px;
@@ -944,7 +913,7 @@ body.nav-opened .nav {
     font-size: 5rem;
     letter-spacing: -1px;
     font-weight: 700;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     color: #fff;
 }
 
@@ -953,7 +922,7 @@ body.nav-opened .nav {
     font-size: 2rem;
     line-height: 1.5em;
     font-weight: 400;
-    font-family: "Merriweather", serif;
+    font-family: "Source Sans Pro", serif;
     letter-spacing: 0.01rem;
     color: rgba(255,255,255,0.8);
 }
@@ -992,27 +961,29 @@ body.nav-opened .nav {
     width: 80%;
     max-width: 710px;
     margin: 4rem auto;
-    padding-bottom: 4rem;
-    border-bottom: #EBF2F6 1px solid;
+    padding: 2rem auto 4rem;
     word-wrap: break-word;
+    background: #fff;
 }
 
 /* Add a little circle in the middle of the border-bottom on our .post
    just for the lolz and stylepoints. */
-.post:after {
-    display: block;
-    content: "";
-    width: 7px;
-    height: 7px;
-    border: #E7EEF2 1px solid;
-    position: absolute;
-    bottom: -5px;
-    left: 50%;
-    margin-left: -5px;
-    background: #FFF;
-    border-radius: 100%;
-    box-shadow: #FFF 0 0 0 5px;
-}
+/*@media only screen and (min-width: 768px) {
+  .post:after {
+      display: block;
+      content: "";
+      width: 7px;
+      height: 7px;
+      border: #E7EEF2 1px solid;
+      position: absolute;
+      bottom: -5px;
+      left: 50%;
+      margin-left: -5px;
+      background: #FFF;
+      border-radius: 100%;
+      box-shadow: #FFF 0 0 0 5px;
+  }
+}*/
 
 body:not(.post-template) .post-title {
     font-size: 3.6rem;
@@ -1035,7 +1006,7 @@ body:not(.post-template) .post-title {
 .post-meta {
     display: block;
     margin: 1.75rem 0 0 0;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     font-size: 1.5rem;
     line-height: 2.2rem;
     color: #9EABB3;
@@ -1189,19 +1160,19 @@ body:not(.post-template) .post-title {
     text-decoration: none;
 }
 
-
 /* The author credit area after the post */
 .post-footer {
     position: relative;
-    margin: 6rem 0 0 0;
-    padding: 3rem 0 0 0;
+    padding: 1rem 0 1rem 0;
     border-top: #EBF2F6 1px solid;
+    height: 100px;
 }
 
 .post-footer h4 {
-    font-size: 1.8rem;
+    font-size: 1.2rem;
     margin: 0;
 }
+
 
 .post-footer p {
     margin: 1rem 0;
@@ -1247,15 +1218,13 @@ body:not(.post-template) .post-title {
    links remain at a fixed width the whole time */
 .post-footer .share {
     position: absolute;
-    top: 3rem;
     right: 0;
-    width: 140px;
 }
 
 .post-footer .share a {
     font-size: 1.8rem;
     display: inline-block;
-    margin: 1rem 1.6rem 1.6rem 0;
+    margin: 0.5rem 1.6rem 0 0;
     color: #BBC7CC;
     text-decoration: none;
 }
@@ -1384,7 +1353,7 @@ body:not(.post-template) .post-title {
 /* Location, website, and link */
 .author-profile .author-meta {
     margin: 2rem 0;
-    font-family: "Merriweather", serif;
+    font-family: "Source Sans Pro", serif;
     letter-spacing: 0.01rem;
     font-size: 1.7rem;
 }
@@ -1417,7 +1386,6 @@ body:not(.post-template) .post-title {
     -webkit-align-items: stretch;
     -ms-flex-align: stretch;
     align-items: stretch;
-    margin-top: 10rem;
 }
 
 .read-next-story {
@@ -1463,6 +1431,7 @@ body:not(.post-template) .post-title {
 .read-next-story .post {
     padding-top: 6rem;
     padding-bottom: 6rem;
+    background: transparent;
 }
 
 .read-next-story .post:before {
@@ -1470,7 +1439,7 @@ body:not(.post-template) .post-title {
     padding: 4px 10px 5px;
     text-transform: uppercase;
     font-size: 1.1rem;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     color: rgba(255,255,255,0.8);
     border: rgba(255,255,255,0.5) 1px solid;
     border-radius: 4px;
@@ -1481,13 +1450,15 @@ body:not(.post-template) .post-title {
 }
 
 .read-next-story h2 {
-    margin-top: 1rem;
+    font-size: 2.5rem;
+    margin-top: 2rem;
     color: #fff;
 }
 
 .read-next-story p {
-    margin: 0;
+    margin: 1rem 0 0;
     color: rgba(255,255,255,0.8);
+    font-size: 1.25rem;
 }
 
 /* Special styles for posts with no cover images */
@@ -1520,14 +1491,14 @@ body:not(.post-template) .post-title {
     box-sizing: border-box;
 }
 
-/* Correctly position site-footer when next to the .read-next container */
+/* Correctly position site-footer when next to the .read-next container
 .read-next + .site-footer {
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
     margin: 0;
-}
+}*/
 
 /* ==========================================================================
    8. Third Party Elements - Embeds from other services
@@ -1562,7 +1533,7 @@ body:not(.post-template) .post-title {
     width: 80%;
     max-width: 710px;
     margin: 4rem auto;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     font-size: 1.3rem;
     color: #9EABB3;
     text-align: center;
@@ -1691,7 +1662,7 @@ body:not(.post-template) .post-title {
 }
 
 .gh-subscribe-rss {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     font-size: 1.2rem;
     line-height: 1.4em;
 }
@@ -1702,9 +1673,10 @@ body:not(.post-template) .post-title {
 
 .site-footer {
     position: relative;
-    margin: 8rem 0 0 0;
+    bottom: 0;
+    margin: 2px 0 0 0;
     padding: 1rem 15px;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     font-size: 1rem;
     line-height: 1.75em;
     color: #BBC7CC;
@@ -1722,14 +1694,14 @@ body:not(.post-template) .post-title {
 
 .poweredby {
     display: block;
-    width: 45%;
+    width: 55%;
     float: right;
     text-align: right;
 }
 
 .copyright {
     display: block;
-    width: 45%;
+    width: 35%;
     float: left;
 }
 
@@ -1742,6 +1714,10 @@ body:not(.post-template) .post-title {
 
     blockquote {
         margin-left: 0;
+    }
+
+    .read-next-story h2 {
+        font-size: 1.5rem;
     }
 
     .main-header {
@@ -1974,11 +1950,11 @@ body:not(.post-template) .post-title {
 
     .post {
         width: auto;
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-        margin-left: 16px;
-        margin-right: 16px;
-        padding-bottom: 2rem;
+        margin-top: 0;
+        margin-bottom: 0;
+        margin-left: 8px;
+        margin-right: 8px;
+        padding-bottom: 0rem;
         line-height: 1.65em;
     }
 
@@ -2067,8 +2043,9 @@ body:not(.post-template) .post-title {
     }
 
     .post-footer {
-        padding: 5rem 0 3rem 0;
+        padding: 1rem 0 1rem 0;
         text-align: center;
+        height: auto;
     }
 
     .post-footer .author {
@@ -2107,7 +2084,10 @@ body:not(.post-template) .post-title {
     }
 
     .site-footer {
-        margin-top: 3rem;
+        margin: 0 2% -5px;
+        padding:5px 5px 0;
+        font-size: 0.8em;
+        line-height: 2em;
     }
 
     .author-profile {
@@ -2148,12 +2128,13 @@ body:not(.post-template) .post-title {
     }
 
     .read-next {
-        margin-top: 2rem;
+        margin-top: 0.5rem;
         margin-bottom: -37px;
     }
 
     .read-next .post {
         width: 100%;
+        background: transparent;
     }
 
 }
