--- a/content/themes/casper/default.hbs
+++ b/content/themes/casper/default.hbs
@@ -17,10 +17,8 @@
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
 
     {{!-- Styles'n'Scripts --}}
-    <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
-    <link rel="stylesheet" type="text/css" href="{{asset "css/reset.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/full.css"}}" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Source+Sans+Pro|Montserrat:400" />
+    <!--<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Source+Sans+Pro|Montserrat:400" />-->
 
     {{!-- Ghost outputs important style and meta data with this tag --}}
     {{ghost_head}}
@@ -36,7 +34,8 @@
     </footer>
 
     {{!-- jQuery needs to come before `{{ghost_foot}}` so that jQuery can be used in code injection --}}
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+    <script type="text/javascript" src="{{asset "js/jquery-3.0.0.min.js"}}"></script>
+    <!--<script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>-->
     {{!-- Ghost outputs important scripts and data with this tag --}}
     {{ghost_foot}}
     {{!-- Fitvids makes video embeds responsive and awesome --}}
