--- a/content/themes/casper/post.hbs
+++ b/content/themes/casper/post.hbs
@@ -23,8 +23,14 @@
 
 <nav>
 		<ul class="cd-primary-nav">
-      <li class="cd-label">Categories</li>
+      <li class="cd-label" style="margin-top:0.5rem;">Explore Website</li>
       {{navigation}}
+      <li class="cd-label">About Us</li>
+      <p>{{@blog.description}}</p>
+      <li class="cd-label">Subscribe to {{@blog.title}}</li>
+      {{>subscriber}}
+      <li class="cd-label">Contact</li>
+
     </ul>
 </nav>
 
@@ -44,35 +50,7 @@
             {{content}}
         </section>
 
-        <footer class="post-footer">
-
-            <section class="share">
-                <h4>Share this post</h4>
-                <a class="icon-twitter" href="https://twitter.com/intent/tweet?text={{encode title}}&amp;url={{url absolute="true"}}"
-                    onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-                    <span class="hidden">Twitter</span>
-                </a>
-                <a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
-                    onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-                    <span class="hidden">Facebook</span>
-                </a>
-                <a class="icon-google-plus" href="https://plus.google.com/share?url={{url absolute="true"}}"
-                   onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
-                    <span class="hidden">Google+</span>
-                </a>
-            </section>
-
-            {{!-- Email subscribe form at the bottom of the page --}}
-            {{#if @labs.subscribers}}
-            <section class="gh-subscribe">
-                <h3 class="gh-subscribe-title">Subscribe to {{@blog.title}}</h3>
-                <p>Get the latest posts delivered right to your inbox.</p>
-                {{subscribe_form placeholder="Your email address"}}
-                <span class="gh-subscribe-rss">or subscribe <a href="http://cloud.feedly.com/#subscription/feed/{{@blog.url}}/rss/">via RSS</a> with Feedly!</span>
-            </section>
-            {{/if}}
-
-        </footer>
+        {{>footer}}
 
     </article>
 </main>
