--- a/content/themes/casper/default.hbs
+++ b/content/themes/casper/default.hbs
@@ -1,46 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    {{!-- Document Settings --}}
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-    {{!-- Page Meta --}}
     <title>{{meta_title}}</title>
     <meta name="description" content="{{meta_description}}" />
-
-    {{!-- Mobile Meta --}}
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    {{!-- Brand icon --}}
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
-
-    {{!-- Styles'n'Scripts --}}
     <link rel="stylesheet" type="text/css" href="{{asset "css/full.css"}}" />
     <!--<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Source+Sans+Pro|Montserrat:400" />-->
-
-    {{!-- Ghost outputs important style and meta data with this tag --}}
     {{ghost_head}}
 </head>
 <body>
-    {{!-- All the main content gets inserted here, index.hbs, post.hbs, etc --}}
+    {{>header}}
     {{{body}}}
+    {{>footer}}
 
-    {{!-- The tiny footer at the very bottom --}}
-    <footer class="site-footer clearfix">
-        <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
-        <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
-    </footer>
-
-    {{!-- jQuery needs to come before `{{ghost_foot}}` so that jQuery can be used in code injection --}}
     <script type="text/javascript" src="{{asset "js/jquery-3.0.0.min.js"}}"></script>
     <!--<script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>-->
-    {{!-- Ghost outputs important scripts and data with this tag --}}
     {{ghost_foot}}
-    {{!-- Fitvids makes video embeds responsive and awesome --}}
     <script type="text/javascript" src="{{asset "js/modernizr.js"}}"></script>
-    {{!-- The main JavaScript file for Casper --}}
     <script type="text/javascript" src="{{asset "js/full.js"}}"></script>
 
 </body>
