--- a/content/themes/casper/default.hbs
+++ b/content/themes/casper/default.hbs
@@ -15,6 +15,7 @@
 <body>
     {{>header}}
     {{{body}}}
+    {{>sidebar}}
     {{>footer}}
 
     <script type="text/javascript" src="{{asset "js/jquery-3.0.0.min.js"}}"></script>
