--- a/content/themes/casper/post.hbs
+++ b/content/themes/casper/post.hbs
@@ -29,15 +29,15 @@
     <a class="read-next-story {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
         <section class="post">
             <h2>{{title}}</h2>
-            <p>{{excerpt words="19"}}&hellip;</p>
+            <time datetime="{{date format="YYYY-MM-DD"}}">{{date format="DD MMMM YYYY"}}</time>
         </section>
     </a>
     {{/next_post}}
     {{#prev_post}}
     <a class="read-next-story prev {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
-        <section class="post">
+        <section class="post prev">
             <h2>{{title}}</h2>
-            <p>{{excerpt words="19"}}&hellip;</p>
+            <time datetime="{{date format="YYYY-MM-DD"}}">{{date format="DD MMMM YYYY"}}</time>
         </section>
     </a>
     {{/prev_post}}
