--- a/content/themes/casper/partials/share.hbs
+++ b/content/themes/casper/partials/share.hbs
@@ -1,7 +1,7 @@
 <footer class="post-footer">
 
     <section class="share">
-        <h4>Share</h4>
+        <h4>Share on</h4>
         <a class="icon-twitter" href="https://twitter.com/intent/tweet?text={{encode title}}&amp;url={{url absolute="true"}}"
             onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
             <span class="hidden">Twitter</span>
