--- a/content/themes/casper/partials/sidebar.hbs
+++ b/content/themes/casper/partials/sidebar.hbs
@@ -4,9 +4,9 @@
     {{>widget-latestpost}}
   </section>
   <section class="one-third column">
-    {{>widget-latestpost}}
+    {{>widget-instagram}}
   </section>
   <section class="one-third column">
-    {{>widget-latestpost}}
+    {{>widget-tags}}
   </section>
 </aside>
