--- a/content/themes/casper/partials/loop.hbs
+++ b/content/themes/casper/partials/loop.hbs
@@ -1,23 +1,12 @@
-{{!-- Previous/next page links - only displayed on page 2+ --}}
-<div class="extra-pagination inner">
-    {{pagination}}
-</div>
-
 {{!-- This is the post loop - each post will be output using this markup --}}
 {{#foreach posts}}
-<article class="{{post_class}}">
-    <header class="post-header">
-        <h2 class="post-title"><a href="{{url}}">{{title}}</a></h2>
-    </header>
-    <section class="post-excerpt">
-        <p>{{excerpt words="26"}} <a class="read-more" href="{{url}}">&raquo;</a></p>
-    </section>
-    <footer class="post-meta">
-        {{#if author.image}}<img class="author-thumb" src="{{author.image}}" alt="{{author.name}}" nopin="nopin" />{{/if}}
-        {{author}}
-        {{tags prefix=" on "}}
-        <time class="post-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format="DD MMMM YYYY"}}</time>
-    </footer>
+<article class="{{post_class}} home">
+  <a href="{{url}}"><section class="cd-intro home {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}"></section></a>
+  <section class="post_header home">
+      <div class="tag">{{tags separator=" "}}</div>
+      <a href="{{url}}"><h1>{{title}}</h1></a>
+      <div class="header_meta">{{#author}}by <a href="{{url}}">{{name}}</a> on {{/author}}<time datetime="{{date format="YYYY-MM-DD"}}">{{date format="DD MMMM YYYY"}}</time></div>
+  </section>
 </article>
 {{/foreach}}
 
