--- a/content/themes/casper/default.hbs
+++ b/content/themes/casper/default.hbs
@@ -23,6 +23,7 @@
     {{ghost_foot}}
     <script type="text/javascript" src="{{asset "js/modernizr.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/full.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/ajaxLoad.js"}}"></script>
 
 </body>
 </html>
