--- a/content/themes/casper/assets/css/full.css
+++ b/content/themes/casper/assets/css/full.css
@@ -12,7 +12,7 @@ Table of Contents
 5.  Single Post
 6.  Sidebar
 7.  Read Next
-8.  Third Party Elements
+8.  Author Profile
 9.  Pagination
 10. Footer
 11. Media Queries (Tablet)
@@ -320,6 +320,13 @@ blockquote cite a { font-weight: normal; }
    3. Utilities - These things get used a lot
    ========================================================================== */
 
+/* Creates a responsive wrapper that makes our content scale nicely */
+ .inner {
+     position: relative;
+     width: 80%;
+     max-width: 710px;
+     margin: 0 auto;
+ }
 /* Clears shit */
 .clearfix:before,
 .clearfix:after {
@@ -335,10 +342,7 @@ blockquote cite a { font-weight: normal; }
    visibility: hidden;
    display: none;
 }
-.vertical {
-    display: table-cell;
-    vertical-align: middle;
-}
+
 
 /* ==========================================================================
 4. General - The main styles for the the theme
@@ -502,6 +506,9 @@ blockquote cite a { font-weight: normal; }
   width: 50px;
   background-color: #03263d;
 }
+.cd-primary-nav-trigger:hover{
+  border:none;
+}
 .cd-primary-nav-trigger .cd-menu-text {
   color: #fff;
   text-transform: uppercase;
@@ -648,7 +655,6 @@ blockquote cite a { font-weight: normal; }
   display: inline-block;
   color: #fff;
   padding: .2em 1em;
-  border-radius: 0.25em;
   -webkit-transition: background 0.2s;
   -moz-transition: background 0.2s;
   transition: background 0.2s;
@@ -924,7 +930,7 @@ font-family: "Montserrat",sans-serif;
   letter-spacing: -1px;
   font-weight: 700;
   font-family: "Montserrat", sans-serif;
-  color: #fff;
+  color: rgba(0,0,0,0.8);
 }
 .page-description {
   margin: 0;
@@ -933,7 +939,7 @@ font-family: "Montserrat",sans-serif;
   font-weight: 400;
   font-family: "Droid Serif", serif;
   letter-spacing: 0.01rem;
-  color: rgba(255,255,255,0.8);
+  color: rgba(0,0,0,0.5);
 }
 .no-cover .page-title {
   color: rgba(0,0,0,0.8);
@@ -1242,6 +1248,188 @@ links remain at a fixed width the whole time */
 }
 
 /* ==========================================================================
+   8. Author profile
+   ========================================================================== */
+
+.author-profile {
+    padding: 20rem 15px 5rem 15px;
+    border-bottom: #EBF2F6 1px solid;
+    text-align: center;
+}
+
+/* Add a little circle in the middle of the border-bottom */
+.author-profile:after {
+    display: block;
+    content: "";
+    width: 7px;
+    height: 7px;
+    border: #E7EEF2 1px solid;
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    margin-left: -5px;
+    background: #FFF;
+    border-radius: 100%;
+    box-shadow: #FFF 0 0 0 5px;
+}
+
+.author-image {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    top: -40px;
+    left: 50%;
+    margin-left: -40px;
+    width: 80px;
+    height: 80px;
+    border-radius: 100%;
+    overflow: hidden;
+    padding: 6px;
+    background: #fff;
+    z-index: 1;
+    box-shadow: #E7EEF2 0 0 0 1px;
+}
+
+.author-image .img {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    border-radius: 100%;
+}
+
+.author-profile .author-image {
+    position: relative;
+    left: auto;
+    top: auto;
+    width: 120px;
+    height: 120px;
+    padding: 3px;
+    margin: -100px auto 0 auto;
+    box-shadow: none;
+}
+
+.author-title {
+    margin: 1.5rem 0 1rem;
+    font-family: "Montserrat", sans-serif;
+    letter-spacing: normal;
+}
+
+.author-bio {
+    font-size: 1.8rem;
+    line-height: 1.5em;
+    font-weight: 200;
+    color: #50585D;
+    letter-spacing: 0;
+    text-indent: 0;
+}
+
+.author-meta {
+    margin: 1.6rem 0;
+}
+/* Location, website, and link */
+.author-profile .author-meta {
+    margin: 2rem 0;
+    font-family: "Montserrat", sans-serif;
+    letter-spacing: 0.01rem;
+    font-size: 1.7rem;
+}
+.author-meta span {
+    display: inline-block;
+    margin: 0 2rem 1rem 0;
+    word-wrap: break-word;
+}
+.author-meta a {
+    text-decoration: none;
+}
+
+/* Turn off meta for page2+ to make room for extra
+   pagination prev/next links */
+.archive-template .author-profile .author-meta {
+    display: none;
+}
+
+/* ==========================================================================
+   9. Pagination - Tools to let you flick between pages
+   ========================================================================== */
+
+/* The main wrapper for our pagination links */
+.pagination {
+    position: relative;
+    width: 80%;
+    max-width: 710px;
+    margin: 4rem auto;
+    font-family: "Montserrat", sans-serif;
+    font-size: 1.3rem;
+    color: #9EABB3;
+    text-align: center;
+}
+.pagination a {
+    color: #9EABB3;
+    transition: all 0.2s ease;
+}
+/* Push the previous/next links out to the left/right */
+.older-posts,
+.newer-posts {
+    position: absolute;
+    display: inline-block;
+    padding: 0 15px;
+    border: #bfc8cd 1px solid;
+    text-decoration: none;
+    border-radius: 4px;
+    transition: border 0.3s ease;
+}
+.older-posts {
+    right: 0;
+}
+.page-number {
+    display: inline-block;
+    padding: 2px 0;
+    min-width: 100px;
+}
+.newer-posts {
+    left: 0;
+}
+.older-posts:hover,
+.newer-posts:hover {
+    color: #889093;
+    border-color: #98a0a4;
+}
+.extra-pagination {
+    display: none;
+    border-bottom: #EBF2F6 1px solid;
+}
+.extra-pagination:after {
+    display: block;
+    content: "";
+    width: 7px;
+    height: 7px;
+    border: #E7EEF2 1px solid;
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    margin-left: -5px;
+    background: #FFF;
+    border-radius: 100%;
+    box-shadow: #FFF 0 0 0 5px;
+}
+.extra-pagination .pagination {
+    width: auto;
+}
+/* On page2+ make all the headers smaller */
+.archive-template .main-header {
+    max-height: 30vh;
+}
+/* On page2+ show extra pagination controls at the top of post list */
+.archive-template .extra-pagination {
+    display: block;
+}
+
+/* ==========================================================================
 10. Subscribe - Generate those email subscribers
 ========================================================================== */
 
@@ -1385,6 +1573,19 @@ links remain at a fixed width the whole time */
       border-top: rgba(0,0,100,0.06) 1px solid;
       border-left: none;
   }
+  .author-profile {
+      padding-bottom: 4rem;
+  }
+  .author-profile .author-bio {
+      font-size: 1.6rem;
+  }
+  .author-meta span {
+      display: block;
+      margin: 1.5rem 0;
+  }
+  .author-profile .author-meta span {
+      font-size: 1.6rem;
+  }
 }
 
 /* ==========================================================================
@@ -1464,6 +1665,31 @@ links remain at a fixed width the whole time */
   .read-next-story .post {
     padding-top: 3rem;
     padding-bottom: 3rem;
+  }
+  .author-meta li {
+      float: none;
+      margin: 0;
+      line-height: 1.75em;
+  }
+  .author-meta li:before {
+      display: none;
+  }
+  .older-posts,
+  .newer-posts {
+      position: static;
+      margin: 10px 0;
+  }
+  .page-number {
+      display: block;
+  }
+  .author-profile {
+      padding-bottom: 2rem;
+  }
+  .author-profile .author-image {
+      margin-top: -70px;
+  }
+  .author-profile .author-meta span {
+      font-size: 1.4rem;
   }
 }
 
