--- a/content/themes/casper/tag.hbs
+++ b/content/themes/casper/tag.hbs
@@ -3,12 +3,6 @@
 
 {{!-- If we have a tag cover, display that - else blog cover - else nothing --}}
 <header class="main-header tag-head {{#if tag.image}}" style="background-image: url({{tag.image}}){{else}}{{#if @blog.cover}}" style="background-image: url({{@blog.cover}}){{else}}no-cover{{/if}}{{/if}}">
-    <nav class="main-nav overlay clearfix">
-        {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
-        {{#if @blog.navigation}}
-            <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
-        {{/if}}
-    </nav>
     <div class="vertical">
         {{#tag}}
         <div class="main-header-content inner">
@@ -17,7 +11,7 @@
                 {{#if description}}
                     {{description}}
                 {{else}}
-                    A {{../pagination.total}}-post collection
+                    {{../pagination.total}}-post tagged in {{name}}
                 {{/if}}
             </h2>
         </div>
@@ -26,7 +20,7 @@
 </header>
 
 {{!-- The main content area on the homepage --}}
-<main class="content" role="main">
+<main class="container">
 
     {{!-- The tag below includes the post loop - partials/loop.hbs --}}
     {{> "loop"}}
