--- a/content/themes/casper/index.hbs
+++ b/content/themes/casper/index.hbs
@@ -12,13 +12,14 @@
 </header>
 
 {{!-- The main content area on the homepage --}}
-<main class="container">
+<main class="container loop">
 
     {{!-- The tag below includes the post loop - partials/loop.hbs --}}
     {{> "loop"}}
 
 </main>
 
+{{!-- Load More --}}
 <div style="width:100%;text-align:center">
     <button id="load-posts">Load more posts</button>
 </div>
