--- a/content/themes/casper/default.hbs
+++ b/content/themes/casper/default.hbs
@@ -8,7 +8,7 @@
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
-    <link rel="stylesheet" type="text/css" href="{{asset "css/full.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}" />
     <!--<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Source+Sans+Pro|Montserrat:400" />-->
     {{ghost_head}}
 </head>
@@ -22,8 +22,9 @@
     <!--<script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>-->
     {{ghost_foot}}
     <script type="text/javascript" src="{{asset "js/modernizr.js"}}"></script>
-    <script type="text/javascript" src="{{asset "js/full.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/navbar.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/ajaxLoad.js"}}"></script>
-
+    <script type="text/javascript" src="{{asset "js/classie.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/clipboard.min.js"}}"></script>
 </body>
 </html>
