--- a/content/themes/casper/index.hbs
+++ b/content/themes/casper/index.hbs
@@ -21,5 +21,5 @@
 
 {{!-- Load More --}}
 <div style="width:100%;text-align:center">
-    <button id="load-posts">Load more posts</button>
+    <button id="load-posts">Load<br/>more<br/>posts</button>
 </div>
