A Little change in color
Matching theme color. Backbutton added. Date format changed

--- a/content/themes/casper/partials/header.hbs
+++ b/content/themes/casper/partials/header.hbs
@@ -11,7 +11,7 @@
 		<span class="cd-menu-text">Menu</span><span class="cd-menu-icon"></span>
 	</a> <!-- menu bar for mobile -->{{/if}}
 
-  <a class:""><span class="go-back icon-arrow-left"></span></a>
+  <a href="javascript:history.back()"><span class="go-back icon-arrow-left"></span></a>
 </header>
 
 <nav>
