--- a/content/themes/casper/assets/css/style.css
+++ b/content/themes/casper/assets/css/style.css
@@ -224,7 +224,7 @@ button {
   cursor: pointer;
   outline: none;
   text-decoration: none;
-  color: #000000;
+  color: #fff;
   font-family: 'Droid Serif', sans-serif;
   font-size: 11px; /* Hack because Firefox sucks ass.*/
   line-height: 13px; /* Hack because Firefox sucks ass.*/
@@ -235,7 +235,7 @@ button {
   text-shadow: none;
   border-radius: 0.3rem;
   border: rgba(0,0,0,0.05) 0.1em solid;
-  background: #ffea00;
+  background: #00b8c9;
 }
 h1, h2, h3,
 h4, h5, h6 {
@@ -275,7 +275,7 @@ a {
     text-decoration: none;
 }
 a:hover {
-  border-bottom: #ffea00 1px solid;
+  border-bottom: #00b8c9 1px solid;
 }
 p, ul, ol, dl {
     -webkit-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
@@ -358,7 +358,7 @@ blockquote cite a { font-weight: normal; }
 }
 .main-header .inner {
     width: 80%;
-    margin:8rem auto 5rem;
+    margin:9rem auto 4rem;
 }
 .cd-container {
   /* this class is used to give a max-width to the element it is applied to, and center it horizontally when it reaches that max-width */
@@ -376,7 +376,8 @@ blockquote cite a { font-weight: normal; }
   position: absolute;
   top: 0;
   left: 0;
-  background: rgba(2, 23, 37, 0.95);
+  background: #00b8c9;
+  border-bottom: #ccc 3px solid;
   height: 60px;
   width: 100%;
   z-index: 3;
@@ -408,7 +409,8 @@ blockquote cite a { font-weight: normal; }
     /* when the user scrolls down, we hide the header right above the viewport */
     position: fixed;
     top: -60px;
-    background-color: rgba(2, 23, 37, 0.96);
+    background-color: #00b8c9;
+    border-bottom: #ccc 3px solid;
     -webkit-transition: -webkit-transform 0.3s;
     -moz-transition: -moz-transform 0.3s;
     transition: transform 0.3s;
@@ -423,7 +425,7 @@ blockquote cite a { font-weight: normal; }
   }
   .cd-header.menu-is-open {
     /* add a background color to the header when the navigation is open */
-    background-color: rgba(2, 23, 37, 0.96);
+    background-color: #00b8c9;
   }
 }
 
@@ -437,17 +439,20 @@ blockquote cite a { font-weight: normal; }
   -ms-transform: translateY(-50%);
   -o-transform: translateY(-50%);
   transform: translateY(-50%);
-  left:50%;
 }
 .cd-logo img {
+  margin: 0 auto;
   display: block;
-  height: 20px;
+  height: 30px;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1170px) {
   .cd-logo {
-    left: 2.6em;
+    padding-left:2.6rem;
     width: auto;
     margin: 0 auto;
+  }
+  .cd-logo img {
+    margin: 0;
   }
 }
 
@@ -476,6 +481,9 @@ blockquote cite a { font-weight: normal; }
   text-transform: uppercase;
   font-weight: 500;
 }
+.cd-secondary-nav a:hover {
+  border: none;
+}
 @media only screen and (min-width: 1170px) {
   .cd-secondary-nav {
     display: block;
@@ -491,7 +499,7 @@ blockquote cite a { font-weight: normal; }
   color: #fff;
   font-size: large;
   padding: 1.2em 1em;
-  background-color: #03263d;
+  background-color: #00b8c9;
 }
 @media only screen and (min-width: 1170px) {
   .go-back {
@@ -505,7 +513,7 @@ blockquote cite a { font-weight: normal; }
   top: 0;
   height: 100%;
   width: 50px;
-  background-color: #03263d;
+  background-color: #00b8c9;
 }
 .cd-primary-nav-trigger:hover{
   border:none;
@@ -620,10 +628,9 @@ blockquote cite a { font-weight: normal; }
   left: 0;
   top: 0;
   height: 100%;
-  width: 100%;
-  background: rgba(2, 23, 37, 0.96);
+  background: #fff;
   z-index: 2;
-  text-align: center;
+  text-align: left;
   font-family: 'Montserrat', sans-serif;
   padding: 50px 0;
   -webkit-backface-visibility: hidden;
@@ -654,7 +661,7 @@ blockquote cite a { font-weight: normal; }
 }
 .cd-primary-nav a {
   display: inline-block;
-  color: #fff;
+  color: #000;
   padding: .2em 1em;
   -webkit-transition: background 0.2s;
   -moz-transition: background 0.2s;
@@ -662,11 +669,12 @@ blockquote cite a { font-weight: normal; }
   line-height: 1.2rem;
 }
 .cd-primary-nav p {
+  font-family: 'Droid Serif', sans-serif;
   font-size: 1.4rem;
-  color:#fff;
+  color:#000;
   padding:0.1rem 2rem;
   text-align: justify;
-  line-height: 1.7rem;
+  line-height: 1.8rem;
   font-weight: 400;
 }
 @media only screen and (min-width: 768px) {
@@ -678,16 +686,13 @@ blockquote cite a { font-weight: normal; }
   background-color: #e36767;
 }
 .cd-primary-nav .cd-label {
-  color: #eee;
+  color: #000;
+  background: #f1f1f1;
   text-transform: uppercase;
   font-weight: 700;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   margin-top: 1.5em;
-  padding: 1.5em 0.8em 0.4em;
-  border-top: #eee 1px solid;
-}
-.cd-primary-nav .cd-label:first-child {
-  border: none;
+  padding: 1em 0.8em 1em;
 }
 .cd-primary-nav .cd-social {
   display: inline-block;
@@ -780,19 +785,20 @@ font-size: 1rem;
   text-transform: uppercase;
   font-size: 1.2rem;
   font-weight: normal;
-  color: #fff;
+  color: #ccc;
 }
 .post_header .header_meta a {
   font-size: 1em;
-  color: #ffea00;
+  color: #fff;
 }
 .post_header .tag a {
   text-transform: uppercase;
-  background: #ffea00;
-  padding: 3px 5px;
-  color:#000000;
-  font-weight: 800;
+  background: #00b8c9;
+  padding: 5px 7px;
+  color:#fff;
+  font-weight: 600;
   font-size: 1rem;
+  border: #fff 2px solid;
 }
 .post_header h1 {
   color: #fff;
@@ -800,7 +806,8 @@ font-size: 1rem;
   font-weight: bold;
   line-height: 3.8rem;
   text-transform: none;
-  padding: 20px 0 10px;
+  padding: 10px 0 5px;
+  margin: 0;
   letter-spacing: normal;
   font-family: 'Montserrat', sans-serif;
 }
@@ -1123,14 +1130,21 @@ links remain at a fixed width the whole time */
 .sidebar-tags ul{
   display: inline-block;
 }
-.sidebar-tags li a{
+.sidebar-tags li a {
   font-size: 1.2rem;
   font-weight: 600;
   font-family: 'Montserrat', sans-serif;
   line-height: 2.8rem;
-  border: #000 1px solid;
+  color: #000;
+  border: #ccc 1px solid;
+  background: #fff;
   padding: 4px;
   text-transform: uppercase;
+}
+.sidebar-tags li a:hover {
+  color: #fff;
+  border: #ccc 1px solid;
+  background: #00b8c9;
 }
 
 /* ==========================================================================
@@ -1178,8 +1192,9 @@ links remain at a fixed width the whole time */
   transition: all 0.2s ease;
 }
 .read-next-story:hover .post:before {
-  color: #222;
-  background: #fff;
+  color: #fff;
+  background: #00b8c9;
+  border: #fff 1px solid;
   transition: all 0.2s ease;
 }
 .read-next-story:before {
@@ -1212,8 +1227,9 @@ links remain at a fixed width the whole time */
   text-transform: uppercase;
   font-size: 1.1rem;
   font-family: 'Montserrat', sans-serif;
-  color: #ffea00;
-  border: #ffea00 1px solid;
+  color: #000;
+  border: #000 1px solid;
+  background: #fff;
   border-radius: 4px;
   transition: all 0.5s ease;
 }
@@ -1485,11 +1501,10 @@ links remain at a fixed width the whole time */
   font-family: 'Montserrat', sans-serif;
   font-size: 1.4rem;
   line-height: 1.4em;
-  color:#fff;
 }
 
 .gh-subscribe-rss a {
-  color: #ffea00;
+  color: #000;
 }
 
 /* ==========================================================================
@@ -1504,12 +1519,13 @@ links remain at a fixed width the whole time */
   font-family: "Montserrat", sans-serif;
   font-size: 1rem;
   line-height: 1.75em;
-  color: #ccc;
-  background: #000000;
+  color: #fff;
+  background-color: #00b8c9;
+  border-top: #ccc 3px solid;
   text-transform: uppercase;
 }
 .site-footer a {
-  color: #BBC7CC;
+  color: #fff;
   text-decoration: none;
   font-weight: bold;
 }
@@ -1559,6 +1575,9 @@ links remain at a fixed width the whole time */
   }
   .gh-subscribe .form-group {
       max-width: 200px;
+  }
+  .gh-subscribe button{
+    background: #00b8c9;
   }
   .gh-subscribe p {
     margin: 0 auto;
