--- a/content/themes/casper/partials/loop.hbs
+++ b/content/themes/casper/partials/loop.hbs
@@ -5,7 +5,7 @@
   <section class="post_header home">
       <div class="tag">{{tags separator=" "}}</div>
       <a href="{{url}}"><h1>{{title}}</h1></a>
-      <div class="header_meta">{{#author}}by <a href="{{url}}">{{name}}</a> on {{/author}}<time datetime="{{date format="YYYY-MM-DD"}}">{{date format="DD MMMM YYYY"}}</time></div>
+      <div class="header_meta">{{#author}}by <a href="{{url}}">{{name}}</a> on {{/author}}<time datetime="{{date format="YYYY-MM-DD"}}">{{date format="DD MMM YYYY"}}</time></div>
   </section>
 </article>
 {{/foreach}}
