--- a/content/themes/casper/partials/subscriber.hbs
+++ b/content/themes/casper/partials/subscriber.hbs
@@ -1,6 +1,6 @@
 {{#if @labs.subscribers}}
 <section class="gh-subscribe">
-    <p style="padding:0.1rem 0.1rem; text-align:center;">Get the latest posts delivered to your inbox.</p>
+    <p style="padding:0.1rem 0.1rem; text-align:center;">Get the latest posts delivered to you.</p>
     {{subscribe_form placeholder="Your email address"}}
     <span class="gh-subscribe-rss">or subscribe <a href="http://cloud.feedly.com/#subscription/feed/{{@blog.url}}/rss/">via RSS</a> with Feedly!</span>
 </section>
